# HnH-Rest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.testing  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: openspec-git-branch.mdc
benchmarks/: README.md  locustfile.py  seed_for_load.py
deploy/: docker-compose.dev.yml
hnh_rest/: __init__.py  __main__.py  gunicorn_runner.py  log.py  settings.py
hnh_rest/db/: base.py  utils.py
hnh_rest/db/migrations/: env.py
hnh_rest/db/migrations/versions/: 2026-02-21_add_prompt_template_bundle_audit.py  2026-02-23_add_prompt_bundle_tags.py
hnh_rest/db/models/: __init__.py  prompt_audit.py  prompt_bundle.py  prompt_template.py
hnh_rest/services/: __init__.py
hnh_rest/services/prompts/: __init__.py  bundle.py  constraints_cache.py  prompt_generator.py  protocols.py  renderer.py  template.py
hnh_rest/services/prompts/audit/: __init__.py  db.py  null.py  service.py
hnh_rest/services/prompts/sources/: __init__.py  db.py  inline.py
hnh_rest/services/redis/: lifespan.py
hnh_rest/web/: __init__.py  application.py  lifespan.py
hnh_rest/web/api/: __init__.py  router.py
hnh_rest/web/api/docs/: __init__.py
hnh_rest/web/api/echo/: __init__.py  views.py
hnh_rest/web/api/monitoring/: __init__.py
hnh_rest/web/api/prompts/: __init__.py  metrics.py  schema.py  views.py
hnh_rest/web/api/redis/: __init__.py  views.py
openspec/: config.yaml
openspec/changes/bundle-model-tags/: design.md  proposal.md  tasks.md
openspec/changes/bundle-model-tags/specs/bundle-model-tags/: spec.md
openspec/changes/optimisation/: .openspec.yaml  design.md  perf_baseline.md  perf_baseline_xxhash.md  proposal.md  tasks.md
openspec/changes/optimisation/specs/optimisation/: spec.md
openspec/changes/prompt-spec-v1/: design.md  proposal.md  tasks.md
openspec/changes/prompt-spec-v1/specs/prompt-spec/: spec.md
openspec/specs/: 000-repo-and-deps.md
scripts/: run_tests.sh  setup_venv.sh
tests/: __init__.py  conftest.py  test_echo.py  test_prompts.py  test_prompts_optimisation.py  test_redis.py
